--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,21 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
     <application
+        android:name=".base.MyBaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".base.MyBaseApplication">
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="label" />
@@ -39,10 +41,14 @@
         <activity
             android:name=".activity.CameraActivity"
             android:theme="@style/FullScreenTheme" />
-        <activity android:name=".activity.FoodLogsActivity" />
-        <activity android:name=".activity.CameraViewDemo"
-            android:theme="@style/FullScreenTheme"
-            android:screenOrientation="portrait"></activity>
+        <activity android:name=".activity.DietRecordActivity" />
+        <activity
+            android:name=".activity.CameraViewDemo"
+            android:screenOrientation="portrait"
+            android:theme="@style/FullScreenTheme" />
+        <activity android:name=".activity.FoodDataBaseActivity" />
+        <activity android:name=".activity.NdbDemo" />
+        <activity android:name=".activity.FoodReportActivity"></activity>
     </application>
 
 </manifest>
